update: add project update procedure